--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@livekit/components-react": "^2.0.0",
+    "@livekit/components-styles": "^1.0.9",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -38,6 +40,7 @@
     "emoji-mart": "^5.5.2",
     "eslint": "8.56.0",
     "eslint-config-next": "13.4.12",
+    "livekit-server-sdk": "^2.0.3",
     "lucide-react": "^0.311.0",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
